// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loading spinner matches the snapshot 1`] = `
<LoadingWrapper
  loaded={false}
/>
`;

exports[`renders the repo selection form if not introduced 1`] = `
<div>
  <SelectRepoForm
    app={
      Object {
        "chart": Object {
          "metadata": Object {
            "name": "bar",
            "version": "1.0.0",
          },
        },
        "name": "foo",
      }
    }
    chartName="bar"
    checkChart={[MockFunction]}
    clearRepo={[MockFunction]}
    fetchChartVersions={[MockFunction]}
    fetchRepositories={
      [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
          Array [],
        ],
      }
    }
    getApp={
      [MockFunction] {
        "calls": Array [
          Array [
            "foo",
            "default",
          ],
          Array [
            "foo",
            "default",
          ],
          Array [
            "foo",
            "default",
          ],
        ],
      }
    }
    getChartValues={[MockFunction]}
    getChartVersion={[MockFunction]}
    kubeappsNamespace="kubeapps"
    namespace="default"
    push={[MockFunction]}
    releaseName="foo"
    repo={Object {}}
    repos={
      Array [
        Object {
          "metadata": Object {
            "name": "stable",
          },
        },
      ]
    }
    selected={Object {}}
    upgradeApp={[MockFunction]}
    version="1.0.0"
  />
</div>
`;

exports[`renders the upgrade form when the repo is available 1`] = `
<div>
  <UpgradeForm
    app={
      Object {
        "chart": Object {
          "metadata": Object {
            "name": "bar",
            "version": "1.0.0",
          },
        },
        "name": "foo",
      }
    }
    appCurrentValues=""
    appCurrentVersion="1.0.0"
    chartName="bar"
    checkChart={[MockFunction]}
    clearRepo={[MockFunction]}
    fetchChartVersions={[MockFunction]}
    fetchRepositories={
      [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
          Array [],
          Array [],
          Array [],
          Array [],
          Array [],
        ],
      }
    }
    getApp={
      [MockFunction] {
        "calls": Array [
          Array [
            "foo",
            "default",
          ],
          Array [
            "foo",
            "default",
          ],
          Array [
            "foo",
            "default",
          ],
          Array [
            "foo",
            "default",
          ],
          Array [
            "foo",
            "default",
          ],
          Array [
            "foo",
            "default",
          ],
          Array [
            "foo",
            "default",
          ],
        ],
      }
    }
    getChartValues={[MockFunction]}
    getChartVersion={[MockFunction]}
    kubeappsNamespace="kubeapps"
    namespace="default"
    push={[MockFunction]}
    releaseName="foo"
    repo="stable"
    repos={
      Array [
        Object {
          "metadata": Object {
            "name": "stable",
          },
        },
      ]
    }
    selected={Object {}}
    upgradeApp={[MockFunction]}
    version="1.0.0"
  />
</div>
`;

exports[`when an error exists renders a generic error message 1`] = `
<ErrorSelector
  action="update"
  defaultRequiredRBACRoles={
    Object {
      "update": Array [
        Object {
          "apiGroup": "kubeapps.com",
          "namespace": "kubeapps",
          "resource": "apprepositories",
          "verbs": Array [
            "get",
          ],
        },
      ],
    }
  }
  error={[Error: foo doesn't exists]}
  namespace="default"
  resource="foo"
/>
`;
